[FIX] Mobile layout issues

--- a/src/style.css
+++ b/src/style.css
@@ -93,9 +93,6 @@ button:focus-visible {
   a:hover {
     color: #747bff;
   }
-  button {
-    background-color: #f9f9f9;
-  }
 
 .section-div {
   border: none;
